# Privacy-Preserving-Cancer-Detection-using-Federated-Learning-with-Synthetic-Data-Augmentation

./: .gitignore  Chiranthan_Colab_Training.ipynb  FL_Training.ipynb  README.md  pyproject.toml  requirements.txt
data/: class_map.json  download.md
federated_learning/: __init__.py  client_app.py  model.py  pyproject.toml  server_app.py  task.py
ml/: explore_data.py  model.py  partition.py  preprocess.py  train_centralized.py  train_federated.py
results/: centralized_metrics.json  fl_metrics.json
