[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cancer-detection-fl"
version = "0.1.0"
description = "Federated Learning for Privacy-Preserving Cancer Detection"
requires-python = ">=3.9"
dependencies = [
    "flwr>=1.12",
    "tensorflow>=2.13",
    "numpy>=1.24",
]

[tool.flwr.app]
publisher = "Rohith"

[tool.flwr.app.components]
serverapp = "federated_learning.server_app:app"
clientapp = "federated_learning.client_app:app"

[tool.flwr.app.config]
# FL training parameters
num-server-rounds = 10
local-epochs = 3
batch-size = 32
learning-rate = 0.001
fraction-train = 0.67  # 2 of 3 clients per round
save-model = true

[tool.flwr.federations]
# Local simulation profile
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3
